--- a/README
+++ b/README
@@ -36,3 +36,8 @@ it, otherwise active testing may be incomplete.
 
 It is recommended to not use the Tor instance controlled by TorBEL
 for normal network traffic, to maximize performance and reliability.
+
+The TorBEL controller must be able to bind to privileged ports (<
+1024).  On Linux, a user must be given the capability
+CAP_NET_BIND_SERVICE to run processes that bind privileged ports.
+Alternatively, TorBEL may be run as root, but this is not recommended.
