--- a/README
+++ b/README
@@ -38,6 +38,8 @@ It is recommended to not use the Tor instance controlled by TorBEL
 for normal network traffic, to maximize performance and reliability.
 
 The TorBEL controller must be able to bind to privileged ports (<
-1024).  On Linux, a user must be given the capability
-CAP_NET_BIND_SERVICE to run processes that bind privileged ports.
-Alternatively, TorBEL may be run as root, but this is not recommended.
+1024).  On Linux, a process must be given the capability
+CAP_NET_BIND_SERVICE to bind privileged ports.
+Alternatively, TorBEL may be run as root, and will drop privileges
+to the user specified in torbel_config.py immediately after binding
+to privileged ports.
