Very basic FastCGI query app.
Test driver for torbel.query module.  Requires flup.
Needs a bit of work to make it more fully featured.

Update software dependencies in README (add flup, remove SocksiPy).

--- a/README
+++ b/README
@@ -22,9 +22,9 @@ The following are required to run TorBEL on your system:
 
  - Tor 0.2.2.13-alpha or higher recommended, with an open
    control port.
- - Python (>= 2.5 is recommended) 
+ - Python (>= 2.5)
  - Recent Git version of TorCtl
- - SocksiPy 
+ - flup (if using checkweb.py)
 
 Network Requirements
 ====================
