Start implementation of Twisted client.
Performs SOCKS4 negotiation and the client side of active testing.
Eliminates lots of code that is no longer needed.  I like this.
Needs more testing, more error checking, etc.

--- a/README
+++ b/README
@@ -23,6 +23,7 @@ The following are required to run TorBEL on your system:
  - Tor 0.2.2.13-alpha or higher recommended, with an open
    control port.
  - Python (>= 2.5)
+ - Twisted (version compatibility not known yet)
  - Recent Git version of TorCtl
  - flup (if using checkweb.py)
 
