--- a/README
+++ b/README
@@ -55,7 +55,7 @@ The TorBEL controller must be able to bind to privileged ports (<
 1024).  On Linux, a process must be given the capability
 CAP_NET_BIND_SERVICE to bind privileged ports.  Alternatively, TorBEL
 may be run as root, and will drop privileges to the user specified in
-torbel_config.py immediately after binding to privileged ports.
+config.py immediately after binding to privileged ports.
 
 Running TorBEL
 ==============
@@ -97,9 +97,9 @@ TorBEL Configuration
 --------------------
 
 After cloning the TorBEL source tree, copy the example configuration
-file to torbel_config.py:
+file to config.py:
 
-  $ cp torbel_config.py.example torbel_config.py
+  $ cp config.py.example config.py
 
 And edit it.  At present, the TorBEL controller does not support
 authentication methods other than HashedControlPassword.  This will
@@ -108,26 +108,26 @@ be fixed in a later revision.
 The TorBEL controller can be executed directly from the source tree
 as follows:
 
-  $ ./torbel
+  $ ./main.py
 
 If torbel is invoked via sudo, it may not inherit your PYTHONPATH
 environment variable.  In this case, you should set it explicitly
 at runtime:
 
-  $ sudo PYTHONPATH=/path/to/TorCtl ./torbel 
+  $ sudo PYTHONPATH=/path/to/TorCtl ./main.py
 
 Logging
 -------
 
 If the output of TorBEL is too noisy, feel free to increase the
-minimum logging severity in torbel_config.py.  The default is DEBUG
-which is quite verbose; when operating in a production environment,
-WARNING should be sufficient, or INFO if you'd like to see more test
-results.  VERBOSE2 should only be used if you have a lot of disk space
-and something is really broken :)
+minimum logging severity in config.py.  The default is DEBUG which is
+quite verbose; when operating in a production environment, WARNING
+should be sufficient, or INFO if you'd like to see more test results.
+VERBOSE2 should only be used if you have a lot of disk space and
+something is really broken :)
 
-The default behavior in torbel_config.py.example has TorBEL log to
-syslog only (using the daemon facility) if it is running as a daemon
+The default behavior in config.py.example has TorBEL log to syslog
+only (using the daemon facility) if it is running as a daemon
 (daemonize = True) and to standard output only if it is not.
 
 You can configure TorBEL to log to any combination of stdout, syslog,
